aggiustamenti
miglioramento grafico e ridondanze